--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@
 		<footer id="footer" class="footer text-center">
 			<ul class="social-menu social-menu--landing social-menu--landing-glitch">
 				<li>
-					<a href="https://instagram.com/reielojob" target="_blank">
+					<a href="https://instagram.com/deusdoelojob" target="_blank">
 						<i class="fab fa-instagram"></i>
-						<span class="link-subtitle">Instagram</span>reielojob
+						<span class="link-subtitle">Instagram</span>Deusdoelojob
 					</a>
 				</li>
 				<li>
 					<a href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 						<i class="fab fa-whatsapp"></i>
-						<span class="link-subtitle">Whatsapp</span>reielojob
+						<span class="link-subtitle">Whatsapp</span>Ddeusdoelojob
 					</a>
 				</li>
 			</ul>
