--- a/duo-boost.html
+++ b/duo-boost.html
@@ -5,7 +5,7 @@
 
 	<!-- Basic Page Needs
 	================================================== -->
-	<title>DEUSSdo Elojob | Duo Boost</title>
+	<title>DEUS do Elojob | Duo Boost</title>
 		<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Boosting (Elojob), MD10 , Duo Boost, Coaching">
