--- a/elo-boost.html
+++ b/elo-boost.html
@@ -62,6 +62,15 @@
 
 	  gtag('config', 'UA-216610504-1');
 	</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LHYRVM4Q53"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LHYRVM4Q53');
+</script>
 </head>
 <style>
     .header-logo--img {
