--- a/duo-boost.html
+++ b/duo-boost.html
@@ -31,14 +31,6 @@
 	================================================== -->
 	<link href="https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700" rel="stylesheet">
 
-	<!-- CSS
-	================================================== -->
-	<!-- Vendor CSS -->
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/slick.css" rel="stylesheet">
-	<link href="css/nanoscroller.css" rel="stylesheet">
-	<link href="css/brands.css">
-
 	<!-- Template CSS-->
 	<link href="css/style.css" rel="stylesheet">
 
@@ -94,7 +86,7 @@
         }
     }
 </style>
-<body class="preloader-is--active ">
+<body class="">
 	<a class="zap-fixed whats-link" href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 		<i class="fab fa-whatsapp"></i>
 	</a>
@@ -431,13 +423,8 @@
 	================================================== -->
 	<!-- Core JS -->
 	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery-migrate.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/core.js"></script>
-	<!-- Vendor JS -->
 	
 	<!-- Template JS -->
-	<script src="js/init.js"></script>
 	<script src="js/duo-boost.js"></script>
 	
 	<!-- Duotone SVG color filter -->
