--- a/politicas-de-privacidade.html
+++ b/politicas-de-privacidade.html
@@ -31,14 +31,6 @@
 	================================================== -->
 	<link href="https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700" rel="stylesheet">
 
-	<!-- CSS
-	================================================== -->
-	<!-- Vendor CSS -->
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/slick.css" rel="stylesheet">
-	<link href="css/nanoscroller.css" rel="stylesheet">
-	<link href="css/brands.css">
-
 	<!-- Template CSS-->
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
@@ -87,7 +79,7 @@
         }
     }
 </style>
-<body class="preloader-is--active ">
+<body>
 	<a class="zap-fixed whats-link" href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 		<i class="fab fa-whatsapp"></i>
 	</a>
@@ -479,14 +471,14 @@
 	================================================== -->
 	<!-- Core JS -->
 	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery-migrate.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/core.js"></script>
-	<!-- Vendor JS -->
-	
-	<!-- Template JS -->
-	<script src="js/init.js"></script>
-	<script src="js/md10.js"></script>
+	<script>
+		menuToggle  = $( '.header-menu-toggle' )
+
+		menuToggle.click(function(){
+			$(this).toggleClass('toggled')
+			$('.site-layout--default').toggleClass('site-wrapper--has-menu-overlay')
+		});
+	</script>
 	
 	<!-- Duotone SVG color filter -->
 	<svg xmlns="http://www.w3.org/2000/svg" class="svg-filters">
