--- a/md10.html
+++ b/md10.html
@@ -5,7 +5,7 @@
 
 	<!-- Basic Page Needs
 	================================================== -->
-	<title>DEUSSdo Elojob | MD10</title>
+	<title>DEUS do Elojob | MD10</title>
 		<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Boosting (Elojob), MD10 , Duo Boost, Coaching">
@@ -30,14 +30,6 @@
 	<!-- Google Web Fonts
 	================================================== -->
 	<link href="https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700" rel="stylesheet">
-
-	<!-- CSS
-	================================================== -->
-	<!-- Vendor CSS -->
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/slick.css" rel="stylesheet">
-	<link href="css/nanoscroller.css" rel="stylesheet">
-	<link href="css/brands.css">
 
 	<!-- Template CSS-->
 	<link href="css/style.css" rel="stylesheet">
@@ -93,7 +85,7 @@
         }
     }
 </style>
-<body class="preloader-is--active ">
+<body class="">
 	<a class="zap-fixed whats-link" href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 		<i class="fab fa-whatsapp"></i>
 	</a>
@@ -390,10 +382,16 @@
 	================================================== -->
 	<!-- Core JS -->
 	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery-migrate.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/core.js"></script>
-	<!-- Vendor JS -->
+
+	<script>
+		menuToggle  = $( '.header-menu-toggle' )
+
+		menuToggle.click(function(){
+			$(this).toggleClass('toggled')
+			$('.site-layout--default').toggleClass('site-wrapper--has-menu-overlay')
+		});
+	</script>
+
 	
 	<!-- Template JS -->
 	<script src="js/init.js"></script>
