--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -5,7 +5,7 @@
 
 	<!-- Basic Page Needs
 	================================================== -->
-	<title>DEUSSdo Elojob | Termos de uso</title>
+	<title>DEUS do Elojob | Termos de uso</title>
 		<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Boosting (Elojob), MD10 , Duo Boost, Coaching">
@@ -30,14 +30,6 @@
 	<!-- Google Web Fonts
 	================================================== -->
 	<link href="https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700" rel="stylesheet">
-
-	<!-- CSS
-	================================================== -->
-	<!-- Vendor CSS -->
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/slick.css" rel="stylesheet">
-	<link href="css/nanoscroller.css" rel="stylesheet">
-	<link href="css/brands.css">
 
 	<!-- Template CSS-->
 	<link href="css/style.css" rel="stylesheet">
@@ -87,7 +79,7 @@
         }
     }
 </style>
-<body class="preloader-is--active ">
+<body>
 	<a class="zap-fixed whats-link" href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 		<i class="fab fa-whatsapp"></i>
 	</a>
@@ -549,36 +541,6 @@
 	<div class="df-custom-cursor-wrap">
 		<div id="df-custom-cursor"></div>
 	</div>
-
-	<!-- Javascript Files
-	================================================== -->
-	<!-- Core JS -->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery-migrate.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/core.js"></script>
-	<!-- Vendor JS -->
-	
-	<!-- Template JS -->
-	<script src="js/init.js"></script>
-	<script src="js/md10.js"></script>
-	
-	<!-- Duotone SVG color filter -->
-	<svg xmlns="http://www.w3.org/2000/svg" class="svg-filters">
-		<filter id="duotone_base">
-			<feColorMatrix type="matrix" result="grayscale"
-				values="1 0 0 0 0
-								1 0 0 0 0
-								1 0 0 0 0
-								0 0 0 1 0" />
-			<feComponentTransfer color-interpolation-filters="sRGB" result="duotone_base_filter">
-				<feFuncR type="table" tableValues="0.082352941176471 0.419607843137255"></feFuncR>
-				<feFuncG type="table" tableValues="0.090196078431373 0.443137254901961"></feFuncG>
-				<feFuncB type="table" tableValues="0.125490196078431 0.6"></feFuncB>
-				<feFuncA type="table" tableValues="0 1"></feFuncA>
-			</feComponentTransfer>
-		</filter>
-	</svg>
 
 </body>
 
