--- a/duo-boost.html
+++ b/duo-boost.html
@@ -43,16 +43,18 @@
             var num=Math.round((max-min)*Math.random()+min)
             document.getElementById("visits").innerHTML=num
         }
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-219200415-1">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    </script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-216541896-1">
+	</script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-  gtag('config', 'UA-219200415-1');
-</script>
+	  gtag('config', 'UA-216610504-1');
+	</script>
+
 </head>
 <style>
     .header-logo--img {
@@ -85,7 +87,7 @@
     }
 </style>
 <body class="">
-	<a class="zap-fixed whats-link" href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
+	<a class="zap-fixed whats-link" href="http://api.whatsapp.com/send?1=pt_BR&phone=5571984320803&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 		<i class="fab fa-whatsapp"></i>
 	</a>
 	<div id="visits-box">
@@ -424,7 +426,14 @@
 	
 	<!-- Template JS -->
 	<script src="js/duo-boost.js"></script>
-	
+	<script>
+		menuToggle  = $( '.header-menu-toggle' )
+
+		menuToggle.click(function(){
+			$(this).toggleClass('toggled')
+			$('.site-layout--default').toggleClass('site-wrapper--has-menu-overlay')
+		});
+	</script>
 	<!-- Duotone SVG color filter -->
 	<svg xmlns="http://www.w3.org/2000/svg" class="svg-filters">
 		<filter id="duotone_base">
