--- a/elo-boost.html
+++ b/elo-boost.html
@@ -47,16 +47,17 @@
             document.getElementById("visits").innerHTML=num
         }
     	</script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-219200415-1">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-216541896-1">
+	</script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-  gtag('config', 'UA-219200415-1');
-</script>
+	  gtag('config', 'UA-216610504-1');
+	</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LHYRVM4Q53"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -64,7 +65,8 @@
   gtag('js', new Date());
 
   gtag('config', 'G-LHYRVM4Q53');
-
+</script>
+</head>
 <style>
     .header-logo--img {
         width: 60px !important;
@@ -96,7 +98,7 @@
     }
 </style>
 <body class="">
-	<a class="zap-fixed whats-link" href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
+	<a class="zap-fixed whats-link" href="http://api.whatsapp.com/send?1=pt_BR&phone=5571984320803&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 		<i class="fab fa-whatsapp"></i>
 	</a>
 	<div id="visits-box">
