--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 
 	<!-- Custom CSS-->
 	<link href="css/custom.css" rel="stylesheet">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-219200415-1">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-216541896-1">
+	</script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-  gtag('config', 'UA-219200415-1');
+	  gtag('config', 'UA-216610504-1');
 </script>
 	<!-- End Global site tag -->	
 </head>
@@ -154,9 +154,9 @@
 					</a>
 				</li>
 				<li>
-					<a href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
+					<a href="http://api.whatsapp.com/send?1=pt_BR&phone=5571984320803&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 						<i class="fab fa-whatsapp"></i>
-						<span class="link-subtitle">Whatsapp</span>deusdoelojob
+						<span class="link-subtitle">Whatsapp</span>Ddeusdoelojob
 					</a>
 				</li>
 			</ul>
