--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				<li>
 					<a href="http://api.whatsapp.com/send?1=pt_BR&phone=5571996656742&text=Vim%20pelo%20site,%20quero%20tirar%20uma%20dúvida" target="_blank">
 						<i class="fab fa-whatsapp"></i>
-						<span class="link-subtitle">Whatsapp</span>Ddeusdoelojob
+						<span class="link-subtitle">Whatsapp</span>Deusdoelojob
 					</a>
 				</li>
 			</ul>
